# windtunnel

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  docs.yml  feature.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release-please.yml
agents/: skill-template.md
docs/: agent-quickstart.md  architecture.md  cli-reference.md  driving-terminus.md  evaluating-skills.md  failure-taxonomy.md  getting-started.md  importing-a-trace.md  index.md  migrating-to-0.9.md  recording-a-universe.md  surface-goldens.md  using-hooks.md  writing-a-classifier.md  writing-a-runtime.md  writing-a-scenario.md  writing-an-optimizer.md
docs/agents/: anti-patterns.md  integration-checklist.md
docs/design/: 0001-trace-reseeding.md  0002-inject-protocol.md  0003-hook-system.md  0004-reference-selftest.md
examples/skill-eval/: README.md  pack.py  prepare.py
examples/skill-eval/base/: incident.wtin.json  transcript.json
examples/skill-eval/base/runs/: saved_trace.json
examples/skill-eval/runs/: ledger.ndjsonl
examples/skill-eval/runs-docker-smoke/: ledger.ndjsonl
examples/skill-eval/runs-matrix/: ledger.ndjsonl
scripts/: build_agent_skill.py
skills/windtunnel/: SKILL.md
skills/windtunnel/references/: agent-quickstart.md  architecture.md  cli-reference.md  evaluating-skills.md  getting-started.md  index.md  writing-a-classifier.md  writing-a-runtime.md  writing-a-scenario.md
skills/windtunnel/references/agents/: integration-checklist.md
skills/windtunnel/references/design/: 0003-hook-system.md  (+3 more)
tests/: test_agent_skill.py  test_cli_selftest.py  test_cli_wt.py  test_dim_clarify_vs_guess.py  test_dim_icl_poisoning.py  test_dim_memory_conflict.py  test_dim_multi_turn_drift.py  test_dim_policy_pressure.py  test_dim_recovery.py  test_dim_sampler_sensitivity.py  test_dim_side_effect_safety.py  test_dim_silent_failure.py  test_dim_tool_affordance.py  test_fastmcp_evidence_routes.py  test_forbidden_before_clip.py  test_forbidden_facts_gate.py  test_hooks.py  test_http_inject_runtime.py  test_import_invariants.py  test_in_memory_runtime.py  test_internal_structure.py  test_module_identity.py  test_pre_send_perturbations.py  test_public_contract.py  test_quality_gates.py  test_reference_selftest.py  test_report.py  test_reset_canary.py  test_runner.py  test_runtime_conformance.py  test_runtime_plugins.py  test_scenario_packs.py  test_scorers.py  test_scoring.py  test_skill_eval_example.py  test_spi_protocols.py  test_state_probe_hook.py  test_surface_capture.py  test_surface_golden.py  test_terminus_runtime.py  (+7 more)
tests/fixtures/labeled_failures/: fixture_01_tool_affordance.json  fixture_02_tool_affordance.json  fixture_03_clarification.json  fixture_04_clarification.json  fixture_05_side_effect_safety_violation.json  fixture_06_side_effect_safety_violation.json  fixture_07_template_corruption.json  fixture_08_template_corruption.json  fixture_09_policy.json  fixture_10_memory.json  fixture_11_recovery.json  fixture_12_sampler_variance.json
windtunnel/: __init__.py  cli.py  effect_classes.py  report.py
windtunnel/_cli/: __init__.py  hooks.py  models.py  module_identity.py  output.py  runtime_discovery.py  scenario_discovery.py  selftest.py  storage.py
windtunnel/_report/: __init__.py  load.py  model.py  text.py
windtunnel/api/: __init__.py  _evidence.py  _matching.py  aggregate.py  canary.py  evaluators.py  importer.py  interchange.py  pack.py  perturbations.py  preconditions.py  replay.py  runner.py  scenario.py  score.py  scorers.py  selftest.py  state_reset.py  surface.py  trace.py  universe.py
windtunnel/api/_runner/: __init__.py  evidence.py  hooks.py  messages.py  world.py
windtunnel/hooks/: __init__.py  debrief.py  state_probe.py
windtunnel/mcp/: __init__.py  recorded.py
windtunnel/mcp/fastmcp/: __init__.py  server.py
windtunnel/runtimes/http_inject/: __init__.py  runtime.py
windtunnel/runtimes/in_memory/: __init__.py  runtime.py
windtunnel/runtimes/terminus/: __init__.py  runtime.py
windtunnel/scenarios/: __init__.py  _mock_factory.py  prototype.py
windtunnel/scenarios/dim_clarify_vs_guess/: __init__.py  scenarios.py  synthetic_db.py
windtunnel/scenarios/dim_icl_poisoning/: __init__.py  scenarios.py
windtunnel/scenarios/dim_memory_conflict/: __init__.py  memory_seeder.py  scenarios.py  synthetic_db.py
windtunnel/scenarios/dim_multi_turn_drift/: __init__.py  multi_turn.py  scenarios.py  synthetic_db.py
windtunnel/scenarios/dim_policy_pressure/: __init__.py  scenarios.py  synthetic_db.py
windtunnel/scenarios/dim_recovery/: __init__.py  scenarios.py  synthetic_db.py
windtunnel/scenarios/dim_sampler_sensitivity/: __init__.py  matrix.py  scenarios.py  synthetic_db.py
windtunnel/scenarios/dim_side_effect_safety/: __init__.py  scenarios.py  synthetic_db.py
windtunnel/scenarios/dim_silent_failure/: __init__.py  scenarios.py  synthetic_db.py
windtunnel/scenarios/dim_tool_affordance/: __init__.py  scenarios.py  synthetic_db.py
windtunnel/skill/: SKILL.md
windtunnel/skill/references/: agent-quickstart.md  architecture.md  cli-reference.md  driving-terminus.md  evaluating-skills.md  failure-taxonomy.md  getting-started.md  importing-a-trace.md  index.md  migrating-to-0.9.md  recording-a-universe.md  surface-goldens.md  using-hooks.md  writing-a-classifier.md  writing-a-scenario.md  writing-an-optimizer.md
windtunnel/spi/: __init__.py  agent_runtime.py  hooks.py  mcp_server.py  reference.py  runtime_plugin.py  state_probe.py
windtunnel/triage/: __init__.py  classifier.py  llm_judge.py  optimizer.py  rule_based.py
(+67 files in other folders)
