[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Distribution name differs from the import name (the bs4 pattern):
# `pip install windtunnel-bench`, `import windtunnel`. The bare PyPI name
# "windtunnel" is an empty squatted registration — a PEP 541 transfer
# request is open; if granted, the dist may be renamed pre-1.0.
name = "windtunnel-bench"
version = "0.10.2"
description = "Wind Tunnel — unittest for agents. A controlled replica of production conditions for agent reliability testing."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Bryson Tang" }]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.1",
]

[project.optional-dependencies]
# Terminus-2 driver (windtunnel.runtimes.terminus). Harbor requires Python
# >=3.12 while windtunnel core supports 3.11 — the marker keeps the base
# install feather-weight and 3.11-compatible; the driver imports harbor
# lazily and raises a clear error when the extra isn't installed.
# Upper bound is deliberate: the driver uses Terminus-2's research-preview
# Python API (not the stable `harbor run` CLI), so each harbor minor bump
# must be revalidated with the integration test before raising the cap.
terminus = ["harbor>=0.17.1,<0.18; python_version >= '3.12'"]

[project.urls]
Homepage = "https://github.com/syntropy-systems-oss/windtunnel"
Issues = "https://github.com/syntropy-systems-oss/windtunnel/issues"

[project.scripts]
wt = "windtunnel.cli:main"

[tool.hatch.build.targets.wheel]
# Required because the distribution name (windtunnel-bench) doesn't match
# the import package (windtunnel) — hatchling can't auto-detect it.
packages = ["windtunnel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: marks tests that require a live platform container (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
docs = [
    # mkdocs pinned <2: the 2.0 rewrite breaks the plugin/theming ecosystem
    # (see mkdocs-material's analysis); material 9.x targets mkdocs 1.x.
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5",
]
dev = [
    "mypy>=1.10",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "pyyaml>=6.0",
    "ruff>=0.15.14",
]
